Minor margin and spacing fixes

--- a/styles/GiveBlock.module.css
+++ b/styles/GiveBlock.module.css
@@ -72,6 +72,7 @@
   .container h3 {
     margin-top: 30px;
     margin-bottom: 20px;
+    max-width: 80%;
   }
 
   .button {
